# vulkan-hair-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/: CMakeLists.txt
libs/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
libs/tiny_obj_loader/: CMakeLists.txt
models/: CMakeLists.txt
shaders/: CMakeLists.txt  basic.frag  basic.vert  compile.sh  hair.frag  hair.vert  simple_shader.frag  simple_shader.vert  skybox.frag  skybox.vert
src/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  Entity.cpp  Entity.hpp  FrameInfo.hpp  Hair.cpp  Hair.h  Hair.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  InputController.cpp  InputController.hpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  Utils.hpp  Window.cpp  Window.hpp  main.cpp
src/vulkan/: Buffer.cpp  Buffer.hpp  Device.cpp  Device.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp
textures/: CMakeLists.txt
